# SolaHub

./: .dockerignore  .editorconfig  .env.example  .env.production  .gitignore  .prettierrc  BUG_QA_CHECKLIST.md  CODE_AUDIT.md  Dockerfile.api  Dockerfile.frontend  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.ts  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  railway.toml  tailwind.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.audit/: architecture-checklist.md  ui-bug-report.md
.github/workflows/: api.yml  frontend.yml  manual-publish-r2.yml  tauri-release.yml
api/: Dockerfile  SolaHub.sln
docs/: AUDIT_MASTER_CHECKLIST.md  SCALABILITY.md
e2e/: app-shell.spec.ts  auth.spec.ts  bible.spec.ts  crawl.spec.ts  notes.spec.ts  offline.spec.ts  plans.spec.ts  presenter.spec.ts  reliability.spec.ts  settings.spec.ts
e2e/support/: auth.ts
scripts/: build-icon.mjs  cleanup-r2.py  downloads.template.html  find-latest-windows.py  generate-tauri-latest-json.py  inject-updater-config.py  setup-prod-db.sh  take-screenshots.mjs
src/: App.vue  env.d.ts  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  presenter.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/commands/: bible.rs  mod.rs  storage.rs  update.rs  window.rs
src/__tests__/: App.auth-isolated.test.ts  SModal.test.ts  config.guard.test.ts  presenter.store.test.ts  setup.ts  songs.store.test.ts  usePresenterScale.test.ts
(+315 files in other folders)
